added design project

--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -49,5 +49,5 @@
     -webkit-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: center;
 }
