--- a/views/layout/_footer.ejs
+++ b/views/layout/_footer.ejs
@@ -23,7 +23,7 @@
             <a class="item ajax" href="/index">Главная</a>
             <a class="item ajax" href="/repair-flat">Дизайнерский ремонт</a>
             <a class="item ajax" href="/repair-house">Ремонт под ключ</a>
-            <a class="item ajax" href="/projects">Галерея</a>
+            <a class="item ajax" href="/projects">Наши работы</a>
             <a class="item ajax" href="/about">О нас</a>
         </div>
     </div> 
