--- a/views/layout/_header.ejs
+++ b/views/layout/_header.ejs
@@ -58,7 +58,7 @@
 		<a class="item ajax mobile-item" href="/index">Главная</a>
 		<a class="item ajax mobile-item" href="/repair-flat">Дизайнерский ремонт</a>
 		<a class="item ajax mobile-item" href="/repair-house">Ремонт под ключ</a>
-		<a class="item ajax mobile-item" href="/projects">Галерея</a>
+		<a class="item ajax mobile-item" href="/projects">Наши работы</a>
 		<a class="item ajax mobile-item" href="/about">О нас</a>
 	</div>
 	<div class="link-box">
@@ -81,7 +81,7 @@
 	<div class="header">
 		<a class="brand" href=""><img class="logo" border="0" alt="логоип дизайнерский ремонт под ключ" src="images/logo.svg"></a>
 	</div>
-	<a class="item ajax" href="/projects">Галерея</a>
+	<a class="item ajax" href="/projects">Наши работы</a>
 	<a class="item ajax" href="/about">О нас</a>
 
 	<div class="icon position-relative">
@@ -120,7 +120,7 @@
 	<div class="header">
 		<a class="brand" href=""><img class="logo" border="0" alt="логоип дизайнерский ремонт под ключ" src="images/logo.svg"></a>
 	</div>
-	<a class="item ajax" href="/projects">Галерея</a>
+	<a class="item ajax" href="/projects">Наши работы</a>
 	<a class="item ajax" href="/about">О нас</a>
 
 	<div class="icon position-relative">
